--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Recette de cookies</h1>
     <h2>Recette pour 6 personnes !</h2>
-    <img width="400px" src="./cookies.jpeg" />
+    <img width="400" src="./cookies.jpeg" alt="cookies" />
     <p><strong>Ingrédients:</strong></p>
     <ul>
         <li>1 Oeuf</li>
